--- a/YellowstonePathology/UI/Surgical/StainOrder.xaml
+++ b/YellowstonePathology/UI/Surgical/StainOrder.xaml
@@ -349,27 +349,37 @@
                     <CheckBox Name="StainOrder120" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" Tag="liverpanel"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="21" Margin="2,2,2,2">Liver Panel</TextBlock>
 
-                    <CheckBox Name="StainOrder121" Grid.Column="0" Grid.Row="22" Margin="2,2,2,2" Tag="trchrme"></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="22" Margin="22,2,2,2">Trichrome</TextBlock>
+                    <StackPanel Grid.Column="0" Grid.Row="22" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <CheckBox Name="StainOrder121" Margin="12,2,2,2" Tag="trchrme"></CheckBox>
+                        <TextBlock Margin="2,2,2,2">Trichrome</TextBlock>
+                    </StackPanel>
 
-                    <CheckBox Name="StainOrder122" Grid.Column="0" Grid.Row="23" Margin="2,2,2,2" Tag="irn"></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="23" Margin="22,2,2,2">Iron</TextBlock>
+                    <StackPanel Grid.Column="0" Grid.Row="23" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <CheckBox Name="StainOrder122" Margin="12,2,2,2" Tag="irn"></CheckBox>
+                        <TextBlock Margin="2,2,2,2">Iron</TextBlock>
+                    </StackPanel>
 
-                    <CheckBox Name="StainOrder123" Grid.Column="0" Grid.Row="24" Margin="2,2,2,2" Tag="pswthdstse"></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="24" Margin="22,2,2,2">PAS with diastase</TextBlock>
+                    <StackPanel Grid.Column="0" Grid.Row="24" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <CheckBox Name="StainOrder123" Margin="12,2,2,2" Tag="pswthdstse"></CheckBox>
+                        <TextBlock Margin="2,2,2,2">PAS with diastase</TextBlock>
+                    </StackPanel>
 
-                    <CheckBox Name="StainOrder124" Grid.Column="0" Grid.Row="25" Margin="2,2,2,2" Tag="">rtcln</CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="25" Margin="22,2,2,2">Reticulin</TextBlock>
+                    <StackPanel Grid.Column="0" Grid.Row="25" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <CheckBox Name="StainOrder124" Margin="12,2,2,2" Tag="rtcln"></CheckBox>
+                        <TextBlock Margin="2,2,2,2">Reticulin</TextBlock>
+                    </StackPanel>
 
-                    <CheckBox Name="StainOrder125" Grid.Column="0" Grid.Row="26" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="26" Margin="22,2,2,2">Copper rhodanine</TextBlock>
+                    <StackPanel Grid.Column="0" Grid.Row="26" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <CheckBox Name="StainOrder125" Margin="12,2,2,2" Tag="MANUAL999"></CheckBox>
+                        <TextBlock Margin="2,2,2,2">Copper rhodanine</TextBlock>
+                    </StackPanel>
 
                     <TextBlock Grid.Column="0" Grid.Row="27" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Melanoma</TextBlock>
 
                     <CheckBox Name="StainOrder126" Grid.Column="0" Grid.Row="28" Margin="2,2,2,2" Tag="sx10"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="28" Margin="2,2,2,2">SOX10</TextBlock>
 
-                    <CheckBox Name="StainOrder127" Grid.Column="0" Grid.Row="29" Margin="2,2,2,2" Tag="">s100</CheckBox>
+                    <CheckBox Name="StainOrder127" Grid.Column="0" Grid.Row="29" Margin="2,2,2,2" Tag="s100"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="29" Margin="2,2,2,2">S100</TextBlock>
 
                     <CheckBox Name="StainOrder128" Grid.Column="0" Grid.Row="30" Margin="2,2,2,2" Tag="mlna"></CheckBox>
@@ -435,6 +445,10 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Breast</TextBlock>
@@ -445,54 +459,101 @@
                     <CheckBox Name="StainOrder21" Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" Tag="estrgnrcptrsmqntttve"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2">ER Semi-quant</TextBlock>
 
-                    <CheckBox Name="StainOrder22" Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder22" Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Tag="prgstrnrcptrsmqntttve"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2">PR, Semi-quant</TextBlock>
 
-                    <CheckBox Name="StainOrder23" Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder23" Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" Tag="estrgnrcptr"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,2">ER</TextBlock>
 
-                    <TextBlock Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Prostate</TextBlock>
+                    <CheckBox Name="StainOrder24" Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" Tag="prgstrnrcptr"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2">PR</TextBlock>
 
-                    <CheckBox Name="StainOrder24" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder25" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" Tag="mmmglbn"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2">Mammaglobin</TextBlock>
 
-                    <CheckBox Name="StainOrder25" Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,2"></TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Prostate</TextBlock>
 
-                    <CheckBox Name="StainOrder26" Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder26" Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" Tag="cytkrtn34"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,2">CK34</TextBlock>
 
-                    <TextBlock Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Epithelial</TextBlock>
+                    <CheckBox Name="StainOrder27" Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" Tag="p504srcmse"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="9" Margin="2,2,2,2">P504s racemase</TextBlock>
 
-                    <CheckBox Name="StainOrder27" Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="10" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder28" Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" Tag="nkx31"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="10" Margin="2,2,2,2">NKX3.1</TextBlock>
 
-                    <CheckBox Name="StainOrder28" Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="11" Margin="2,2,2,2"></TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Epithelial</TextBlock>
 
-                    <CheckBox Name="StainOrder29" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="12" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder29" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" Tag="pncytkrtn"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="12" Margin="2,2,2,2">Pancytokeratin</TextBlock>
 
-                    <CheckBox Name="StainOrder210" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="13" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder210" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" Tag="oscr"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="13" Margin="2,2,2,2">OSCAR</TextBlock>
 
-                    <CheckBox Name="StainOrder211" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="14" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder211" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" Tag="cytkrtn56"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="14" Margin="2,2,2,2">CK5/6</TextBlock>
 
-                    <CheckBox Name="StainOrder212" Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="15" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder212" Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" Tag="cytkrtn7"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="15" Margin="2,2,2,2">CK7</TextBlock>
 
-                    <CheckBox Name="StainOrder213" Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="16" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder213" Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" Tag="cytkrtn20"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="16" Margin="2,2,2,2">CK20</TextBlock>
 
-                    <CheckBox Name="StainOrder214" Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="17" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder214" Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" Tag="cytkrtn34"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="17" Margin="2,2,2,2">CK34</TextBlock>
 
-                    <CheckBox Name="StainOrder215" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="18" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder215" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" Tag="ema"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="18" Margin="2,2,2,2">EMA</TextBlock>
 
-                    <CheckBox Name="StainOrder216" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2" Tag=""></CheckBox>
-                    <TextBlock Grid.Column="1" Grid.Row="19" Margin="2,2,2,2"></TextBlock>
+                    <CheckBox Name="StainOrder216" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2" Tag="ecdhrn"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="19" Margin="2,2,2,2">E-cadherin</TextBlock>
+
+                    <CheckBox Name="StainOrder217" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="20" Margin="2,2,2,2">HER-2/Neu</TextBlock>
+
+                    <CheckBox Name="StainOrder218" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" Tag="mc31"></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="21" Margin="2,2,2,2">MOC 31</TextBlock>
+
+                    <TextBlock Grid.Column="0" Grid.Row="22" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Site Specific Tumor Markers</TextBlock>
+
+                    <CheckBox Name="StainOrder219" Grid.Column="0" Grid.Row="23" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="23" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder220" Grid.Column="0" Grid.Row="24" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="24" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder221" Grid.Column="0" Grid.Row="25" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="25" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder222" Grid.Column="0" Grid.Row="26" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="26" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder223" Grid.Column="0" Grid.Row="27" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="27" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder224" Grid.Column="0" Grid.Row="28" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="28" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder225" Grid.Column="0" Grid.Row="29" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="29" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder226" Grid.Column="0" Grid.Row="30" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="30" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder227" Grid.Column="0" Grid.Row="31" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="31" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder228" Grid.Column="0" Grid.Row="32" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="32" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder229" Grid.Column="0" Grid.Row="33" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="33" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder230" Grid.Column="0" Grid.Row="34" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="34" Margin="2,2,2,2"></TextBlock>
+
+                    <CheckBox Name="StainOrder231" Grid.Column="0" Grid.Row="35" Margin="2,2,2,2" Tag=""></CheckBox>
+                    <TextBlock Grid.Column="1" Grid.Row="35" Margin="2,2,2,2"></TextBlock>
                 </Grid>
 
                 <Grid Grid.Column="3">
