--- a/YellowstonePathology/UI/Surgical/StainOrder.xaml
+++ b/YellowstonePathology/UI/Surgical/StainOrder.xaml
@@ -233,16 +233,16 @@
                     <TextBlock Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" 
                                TextDecorations="Underline">Melanoma</TextBlock>
 
-                    <CheckBox Name="StainOrder011" Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" Tag="sx10"></CheckBox>
+                    <CheckBox Name="StainOrder011" Tag="sx10" Grid.Column="0" Grid.Row="11" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="11" Margin="2,2,2,2">SOX10</TextBlock>
 
-                    <CheckBox Name="StainOrder012" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" Tag="s100"></CheckBox>
+                    <CheckBox Name="StainOrder012" Tag="s100" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="12" Margin="2,2,2,2">S100</TextBlock>
 
-                    <CheckBox Name="StainOrder013" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" Tag="mlna"></CheckBox>
+                    <CheckBox Name="StainOrder013" Tag="mlna" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="13" Margin="2,2,2,2">Melan A</TextBlock>
 
-                    <CheckBox Name="StainOrder014" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" Tag="hmb45"></CheckBox>
+                    <CheckBox Name="StainOrder014" Tag="hmb45" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="14" Margin="2,2,2,2">HMB-45</TextBlock>
 
                 </Grid>
@@ -296,91 +296,91 @@
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" TextDecorations="Underline">Cytochemical</TextBlock>
 
-                    <CheckBox Name="StainOrder10" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" Tag="acdfst"></CheckBox>
+                    <CheckBox Name="StainOrder11" Tag="acdfst" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2">Acid Fast</TextBlock>
 
-                    <CheckBox Name="StainOrder11" Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" Tag="alcnble"></CheckBox>
+                    <CheckBox Name="StainOrder12" Tag="alcnble" Grid.Column="0" Grid.Row="2" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2">Alcian Blue</TextBlock>
 
-                    <CheckBox Name="StainOrder12" Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Tag="cngrd"></CheckBox>
+                    <CheckBox Name="StainOrder13" Tag="cngrd" Grid.Column="0" Grid.Row="3" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2">Congo Red</TextBlock>
 
-                   <CheckBox Name="StainOrder13" Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder14" Tag="cpprrhdnne" Grid.Column="0" Grid.Row="4" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,2">Copper rhodanine</TextBlock>
 
-                    <CheckBox Name="StainOrder14" Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" Tag="elstc"></CheckBox>
+                    <CheckBox Name="StainOrder15" Tag="elstc" Grid.Column="0" Grid.Row="5" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2">Elastic</TextBlock>
 
-                    <CheckBox Name="StainOrder15" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder16" Tag="fts" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2">Fites</TextBlock>
 
-                    <CheckBox Name="StainOrder16" Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder17" Tag="gt" Grid.Column="0" Grid.Row="7" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,2">Gout</TextBlock>
 
-                    <CheckBox Name="StainOrder17" Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" Tag="gms"></CheckBox>
+                    <CheckBox Name="StainOrder18" Tag="gms" Grid.Column="0" Grid.Row="8" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,2">GMS</TextBlock>
 
-                    <CheckBox Name="StainOrder18" Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder19" Tag="hckrtwrt" Grid.Column="0" Grid.Row="9" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="9" Margin="2,2,2,2">Hucker-Twort</TextBlock>
 
-                    <CheckBox Name="StainOrder19" Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" Tag="irn"></CheckBox>
+                    <CheckBox Name="StainOrder110" Tag="irn" Grid.Column="0" Grid.Row="10" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="10" Margin="2,2,2,2">Iron</TextBlock>
 
-                    <CheckBox Name="StainOrder110" Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder111" Tag="mlnn" Grid.Column="0" Grid.Row="11" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="11" Margin="2,2,2,2">Melanin</TextBlock>
 
-                    <CheckBox Name="StainOrder111" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder112" Tag="mcn" Grid.Column="0" Grid.Row="12" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="12" Margin="2,2,2,2" Tag="">Mucin</TextBlock>
 
-                    <CheckBox Name="StainOrder112" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" Tag="MANUAL999"></CheckBox>
+                    <CheckBox Name="StainOrder113" Tag="olrdo" Grid.Column="0" Grid.Row="13" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="13" Margin="2,2,2,2">Oil Red O</TextBlock>
 
-                    <CheckBox Name="StainOrder113" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" Tag="ps"></CheckBox>
+                    <CheckBox Name="StainOrder114" Tag="ps" Grid.Column="0" Grid.Row="14" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="14" Margin="2,2,2,2">PAS</TextBlock>
 
-                    <CheckBox Name="StainOrder114" Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" Tag="pslcnble"></CheckBox>
+                    <CheckBox Name="StainOrder115" Tag="pslcnble" Grid.Column="0" Grid.Row="15" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="15" Margin="2,2,2,2">PAS alcian blue</TextBlock>
 
-                    <CheckBox Name="StainOrder115" Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" Tag="psfrfngs"></CheckBox>
+                    <CheckBox Name="StainOrder116" Tag="psfrfngs" Grid.Column="0" Grid.Row="16" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="16" Margin="2,2,2,2">PAS for fungus</TextBlock>
 
-                    <CheckBox Name="StainOrder116" Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" Tag="pswthdstse"></CheckBox>
+                    <CheckBox Name="StainOrder117" Tag="pswthdstse" Grid.Column="0" Grid.Row="17" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="17" Margin="2,2,2,2">PAS with diastase</TextBlock>
 
-                    <CheckBox Name="StainOrder117" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" Tag="rtcln"></CheckBox>
+                    <CheckBox Name="StainOrder118" Tag="rtcln" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="18" Margin="2,2,2,2">Reticulin</TextBlock>
 
-                    <CheckBox Name="StainOrder118" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2" Tag="stnrndstnr"></CheckBox>
+                    <CheckBox Name="StainOrder119" Tag="stnrndstnr" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="19" Margin="2,2,2,2">Steiner and Steiner</TextBlock>
 
-                    <CheckBox Name="StainOrder119" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2" Tag="trchrme"></CheckBox>
+                    <CheckBox Name="StainOrder120" Tag="trchrme" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="20" Margin="2,2,2,2">Trichrome</TextBlock>
 
-                    <CheckBox Name="StainOrder120" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" Tag="liverpanel" Checked="CheckBoxLiverPanel_Checked"></CheckBox>
+                    <CheckBox Name="StainOrder121" Tag="liverpanel" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" Checked="CheckBoxLiverPanel_Checked"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="21" Margin="2,2,2,2">Liver Panel</TextBlock>
 
                     <StackPanel Grid.Column="0" Grid.Row="22" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <CheckBox Name="StainOrder121" Margin="12,2,2,2" Tag="trchrme"></CheckBox>
+                        <CheckBox Name="StainOrder122" Tag="trchrme" Margin="12,2,2,2"></CheckBox>
                         <TextBlock Margin="2,2,2,2">Trichrome</TextBlock>
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="23" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <CheckBox Name="StainOrder122" Margin="12,2,2,2" Tag="irn"></CheckBox>
+                        <CheckBox Name="StainOrder123" Tag="irn" Margin="12,2,2,2"></CheckBox>
                         <TextBlock Margin="2,2,2,2">Iron</TextBlock>
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="24" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <CheckBox Name="StainOrder123" Margin="12,2,2,2" Tag="pswthdstse"></CheckBox>
+                        <CheckBox Name="StainOrder124" Tag="pswthdstse" Margin="12,2,2,2"></CheckBox>
                         <TextBlock Margin="2,2,2,2">PAS with diastase</TextBlock>
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="25" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <CheckBox Name="StainOrder124" Margin="12,2,2,2" Tag="rtcln"></CheckBox>
+                        <CheckBox Name="StainOrder125" Tag="rtcln" Margin="12,2,2,2"></CheckBox>
                         <TextBlock Margin="2,2,2,2">Reticulin</TextBlock>
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="26" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <CheckBox Name="StainOrder125" Margin="12,2,2,2" Tag="MANUAL999"></CheckBox>
+                        <CheckBox Name="StainOrder126" Tag="cpprrhdnne" Margin="12,2,2,2"></CheckBox>
                         <TextBlock Margin="2,2,2,2">Copper rhodanine</TextBlock>
                     </StackPanel>
                 </Grid>
@@ -477,7 +477,7 @@
                     <CheckBox Name="StainOrder219" Tag="ecdhrn" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="19" Margin="2,2,2,2">E-cadherin</TextBlock>
 
-                    <CheckBox Name="StainOrder220" Tag="MANUAL999" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2"></CheckBox>
+                    <CheckBox Name="StainOrder220" Tag="hr2nu" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="20" Margin="2,2,2,2">HER-2/Neu</TextBlock>
 
                     <CheckBox Name="StainOrder221" Tag="mc31" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2"></CheckBox>
@@ -533,7 +533,7 @@
                     <CheckBox Name="StainOrder35" Tag="clrtnn" Grid.Column="0" Grid.Row="5" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2">Calretinin</TextBlock>
 
-                    <CheckBox Name="StainOrder36" Tag="MANUAL999" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2"></CheckBox>
+                    <CheckBox Name="StainOrder36" Tag="ca" Grid.Column="0" Grid.Row="6" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,2">CEA</TextBlock>
 
                     <CheckBox Name="StainOrder37" Tag="prsttccdphsphtse" Grid.Column="0" Grid.Row="7" Margin="2,2,2,2"></CheckBox>
@@ -542,7 +542,7 @@
                     <CheckBox Name="StainOrder38" Tag="rcc" Grid.Column="0" Grid.Row="8" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,2">RCC</TextBlock>
 
-                    <CheckBox Name="StainOrder39" Tag="MANUAL999" Grid.Column="0" Grid.Row="9" Margin="2,2,2,2"></CheckBox>
+                    <CheckBox Name="StainOrder39" Tag="hptcytspcfcntgn" Grid.Column="0" Grid.Row="9" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="9" Margin="2,2,2,2">HSA</TextBlock>
 
                     <CheckBox Name="StainOrder310" Tag="px5" Grid.Column="0" Grid.Row="10" Margin="2,2,2,2"></CheckBox>
@@ -569,19 +569,19 @@
                     <TextBlock Grid.Column="1" Grid.Row="17" Grid.ColumnSpan="2" Margin="2,2,2,2" FontWeight="Bold" 
                                TextDecorations="Underline">Neural</TextBlock>
 
-                    <CheckBox Name="StainOrder318" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" Tag="cd56"></CheckBox>
+                    <CheckBox Name="StainOrder318" Tag="cd56" Grid.Column="0" Grid.Row="18" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="18" Margin="2,2,2,2">CD56</TextBlock>
 
-                    <CheckBox Name="StainOrder319" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2" Tag="s100"></CheckBox>
+                    <CheckBox Name="StainOrder319" Tag="s100" Grid.Column="0" Grid.Row="19" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="19" Margin="2,2,2,2">S100</TextBlock>
 
-                    <CheckBox Name="StainOrder320" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2" Tag="chrmgrnn"></CheckBox>
+                    <CheckBox Name="StainOrder320" Tag="chrmgrnn" Grid.Column="0" Grid.Row="20" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="20" Margin="2,2,2,2">Chromogranin</TextBlock>
 
-                    <CheckBox Name="StainOrder321" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" Tag="synptphysn"></CheckBox>
+                    <CheckBox Name="StainOrder321" Tag="synptphysn" Grid.Column="0" Grid.Row="21" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="21" Margin="2,2,2,2">Synaptophysin</TextBlock>
 
-                    <CheckBox Name="StainOrder322" Grid.Column="0" Grid.Row="22" Margin="2,2,2,2" Tag="gfp"></CheckBox>
+                    <CheckBox Name="StainOrder322" Tag="gfp" Grid.Column="0" Grid.Row="22" Margin="2,2,2,2"></CheckBox>
                     <TextBlock Grid.Column="1" Grid.Row="22" Margin="2,2,2,2">GFAP</TextBlock>
 
                 </Grid>
