--- a/YellowstonePathology/UI/Stain/StainEditDialog.xaml
+++ b/YellowstonePathology/UI/Stain/StainEditDialog.xaml
@@ -56,7 +56,7 @@
         <TextBox Grid.Row="2" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.StainAbbreviation}" />
 
         <TextBlock Grid.Row="3" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Histology Display:</TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.HistologyDisplayString}" />
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.HistologyDisplayString}" />
 
         <TextBlock Grid.Row="4" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Stain Type:</TextBlock>
         <ComboBox Grid.Row="4" Grid.Column="1" Margin="2,2,2,2" FontSize="14" ItemsSource="{Binding Path=StainTypes}" 
@@ -80,14 +80,17 @@
         <TextBlock Grid.Row="10" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Has Cpt Code Levels:</TextBlock>
         <CheckBox Grid.Row="10" Grid.Column="1" Margin="2,2,2,2" FontSize="14" IsChecked="{Binding Path=Stain.HasCptCodeLevels}" />
 
-        <TextBlock Grid.Row="11" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Has G Code:</TextBlock>
-        <CheckBox Grid.Row="11" Grid.Column="1" Margin="2,2,2,2" FontSize="14" IsChecked="{Binding Path=Stain.HasGCode}" />
+        <TextBlock Grid.Row="11" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Subsequent CPT Code:</TextBlock>
+        <TextBox Grid.Row="11" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.SubsequentCPTCode}" />
 
-        <TextBlock Grid.Row="12" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">G Code:</TextBlock>
-        <TextBox Grid.Row="12" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.GCode}" />
+        <TextBlock Grid.Row="12" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Has G Code:</TextBlock>
+        <CheckBox Grid.Row="12" Grid.Column="1" Margin="2,2,2,2" FontSize="14" IsChecked="{Binding Path=Stain.HasGCode}" />
 
-        <TextBlock Grid.Row="13" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Subsequent CPT Code:</TextBlock>
-        <TextBox Grid.Row="13" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.SubsequentCPTCode}" />
+        <TextBlock Grid.Row="13" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">G Code:</TextBlock>
+        <TextBox Grid.Row="13" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.GCode}" />
+
+        <TextBlock Grid.Row="14" Grid.Column="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">Subsequent G Code:</TextBlock>
+        <TextBox Grid.Row="14" Grid.Column="1" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.SubsequentGCode}" />
 
         <TextBlock Grid.Row="0" Grid.Column="2" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" TextAlignment="Right">YPI Test Id:</TextBlock>
         <TextBox Grid.Row="0" Grid.Column="3" Margin="2,2,2,2" FontSize="14" TextAlignment="Left" Text="{Binding Path=Stain.TestId}" />
