--- a/YellowstonePathology/UI/Test/PreviousResultDialog.xaml
+++ b/YellowstonePathology/UI/Test/PreviousResultDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
         mc:Ignorable="d"
-        Title="Previous Results" Height="600" Width="320" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
+        Title="Previous Results" Height="600" Width="440" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
@@ -27,7 +27,7 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Final Date" Width="120" >
+                    <GridViewColumn Header="Final Date" Width="110" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Path=FinalDate, Converter={StaticResource ShortDateConverter}}" VerticalAlignment="Top"></TextBlock>
@@ -38,6 +38,13 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Path=Result}" VerticalAlignment="Top"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Indication" Width="130">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Indication}" VerticalAlignment="Top"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
